edit contact page for integrate to main website

--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://karuf.com/public/css/app.css?id=e34423ba4b9ce47290bc7e75b1a9a326">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/tailwind.css">
     <title>Contact Us</title>
 </head>
 
@@ -34,64 +34,70 @@
     </div>
 
 
-    <div class="flex flex-wrap  mx-auto container mx-auto sm:px-4 text-center">
-        <div class="w-full sm:w-1/2 pr-4 pl-4 lg:w-1/4 pr-4 pl-4 mt-3">
+    <div class="grid grid-cols-12 mx-auto container mx-auto sm:px-4 text-center">
+        <div class="col-span-12 sm:col-span-6 md:col-span-3 pr-4 pl-4 pr-4 pl-4 mt-3">
             <a href="tel:+601129114461" rel="noreferrer">
                 <div class="contact_card pt-5 pb-3 px-2 h-full">
-                    <div class="pb-3"><svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24"
+                    <div class="pb-3">
+                        <svg class="mx-auto" stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24"
                             stroke-linecap="round" stroke-linejoin="round" height="25" width="25"
                             xmlns="http://www.w3.org/2000/svg">
                             <rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
                             <line x1="12" y1="18" x2="12.01" y2="18"></line>
-                        </svg></div>
-                    <h6 class="fw-bolder">Call Us</h6>
-                    <p class="text-gray-700">+60 1129114461</p>
+                        </svg>
+                    </div>
+                    <h6 class="fw-bolder mb-5">Call Us</h6>
+                    <p class="mb-5 text-gray-700">+60 1129114461</p>
                 </div>
             </a>
         </div>
-        <div class="w-full sm:w-1/2 pr-4 pl-4 lg:w-1/4 pr-4 pl-4 mt-3">
+        <div class="col-span-12 sm:col-span-6 md:col-span-3 pr-4 pl-4 pr-4 pl-4 mt-3">
             <a href="https://goo.gl/maps/KSBeWih74SyBbQvq6" target="_blank" rel="noreferrer">
                 <div class="contact_card pt-5 pb-3 px-2 h-full">
                     <div class="pb-3">
-                        <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024"
-                            height="25" width="25" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="mx-auto" stroke="currentColor" fill="currentColor" stroke-width="0"
+                            viewBox="0 0 1024 1024" height="25" width="25" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M515.664-.368C305.76-.368 128 178.4 128 390.176c0 221.76 206.032 448.544 344.624 607.936.528.64 22.929 25.52 50.528 25.52h2.449c27.6 0 49.84-24.88 50.399-25.52 130.064-149.52 320-396.048 320-607.936C896 178.4 757.344-.368 515.664-.368zm12.832 955.552c-1.12 1.12-2.753 2.369-4.193 3.409-1.472-1.008-3.072-2.288-4.255-3.408l-16.737-19.248C371.92 785.2 192 578.785 192 390.176c0-177.008 148.224-326.56 323.664-326.56 218.528 0 316.336 164 316.336 326.56 0 143.184-102.128 333.296-303.504 565.008zm-15.377-761.776c-106.032 0-192 85.968-192 192s85.968 192 192 192 192-85.968 192-192-85.968-192-192-192zm0 320c-70.576 0-129.473-58.816-129.473-129.408 0-70.576 57.424-128 128-128 70.624 0 128 57.424 128 128 .032 70.592-55.903 129.408-126.527 129.408z">
                             </path>
                         </svg>
                     </div>
-                    <h6 class="fw-bolder">Visit Us</h6>
-                    <p class="text-gray-700">A-14-03 AMPANG BOULEVARD, AMPANG, SELANGOR, MALAYSIAN</p>
+                    <h6 class="fw-bolder mb-5">Visit Us</h6>
+                    <p class="mb-5 text-gray-700 text-sm">A-14-03 AMPANG BOULEVARD, AMPANG, SELANGOR, MALAYSIAN</p>
                 </div>
             </a>
         </div>
-        <div class="w-full sm:w-1/2 pr-4 pl-4 lg:w-1/4 pr-4 pl-4 mt-3">
+        <div class="col-span-12 sm:col-span-6 md:col-span-3 pr-4 pl-4 pr-4 pl-4 mt-3">
             <a href="mailto:info@karuf.com" rel="noreferrer">
                 <div class="contact_card pt-5 pb-3 px-2 h-full">
-                    <div class="pb-3"><svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24"
+                    <div class="pb-3">
+                        <svg class="mx-auto" stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24"
                             stroke-linecap="round" stroke-linejoin="round" height="25" width="25"
                             xmlns="http://www.w3.org/2000/svg">
                             <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z">
                             </path>
                             <polyline points="22,6 12,13 2,6"></polyline>
-                        </svg></div>
-                    <h6 class="fw-bolder">Mail Us</h6>
-                    <p class="text-gray-700">info@karuf.com</p>
+                        </svg>
+                    </div>
+                    <h6 class="fw-bolder mb-5">Mail Us</h6>
+                    <p class="mb-5 text-gray-700">info@karuf.com</p>
                 </div>
             </a>
         </div>
-        <div class="w-full sm:w-1/2 pr-4 pl-4 lg:w-1/4 pr-4 pl-4 mt-3">
+        <div class="col-span-12 sm:col-span-6 md:col-span-3 pr-4 pl-4 pr-4 pl-4 mt-3">
             <a href="/" target="_blank" rel="noreferrer">
                 <div class="contact_card pt-5 pb-3 px-2 h-full">
-                    <div class="pb-3"><svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1"
+                    <div class="pb-3">
+                        <svg class="mx-auto" stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1"
                             viewBox="0 0 17 17" height="25" width="25" xmlns="http://www.w3.org/2000/svg">
                             <g></g>
                             <path
                                 d="M15.668 6.017c-0.957-3.557-3.863-6.017-7.168-6.017-3.295 0-6.212 2.464-7.168 6.017-0.747 0.082-1.332 0.712-1.332 1.483v4c0 0.625 0.382 1.16 0.924 1.385 0.194 1.747 1.663 3.115 3.461 3.115h2.707c0.207 0.581 0.757 1 1.408 1h3c0.827 0 1.5-0.673 1.5-1.5s-0.673-1.5-1.5-1.5h-3c-0.651 0-1.201 0.419-1.408 1h-2.707c-1.208 0-2.217-0.86-2.449-2h1.064v-1h1v-5h-1v-1h-0.606c0.913-2.961 3.352-5 6.106-5 2.762 0 5.193 2.037 6.106 5h-0.606v1h-1v5h1v1h1.506c0.824 0 1.494-0.673 1.494-1.5v-4c0-0.771-0.585-1.401-1.332-1.483zM8.5 15h3c0.275 0 0.5 0.224 0.5 0.5s-0.225 0.5-0.5 0.5h-3c-0.275 0-0.5-0.224-0.5-0.5s0.225-0.5 0.5-0.5zM2 12h-0.506c-0.272 0-0.494-0.224-0.494-0.5v-4c0-0.276 0.222-0.5 0.494-0.5h0.506v5zM16 11.5c0 0.276-0.222 0.5-0.494 0.5h-0.506v-5h0.506c0.272 0 0.494 0.224 0.494 0.5v4z">
                             </path>
-                        </svg></div>
-                    <h6 class="fw-bolder">Live Chat</h6>
-                    <p class="text-gray-700">Chat with Us 24/7</p>
+                        </svg>
+                    </div>
+                    <h6 class="fw-bolder mb-5">Live Chat</h6>
+                    <p class="mb-5 text-gray-700">Chat with Us 24/7</p>
                 </div>
             </a>
         </div>
@@ -100,15 +106,17 @@
 
 
 
-    <div class="my-5 container mx-auto sm:px-4 text-center">
-        <h4> Let's Talk !</h4>
-        <p class="text-gray-700">
+    <div class="mt-10 container mx-auto sm:px-4 text-center">
+        <h4 class="text-xl"> Let's Talk !</h4>
+        <p class="text-gray-500">
             To know more about our work or process feel free to get in touch.
         </p>
     </div>
-    <div class="flex flex-wrap  mx-auto pt-3 container mx-auto sm:px-4">
-        <div class="w-full lg:w-1/2 pr-4 pl-4 p-2 lg:p-12">
-            <h1>
+
+
+    <div class="grid grid-cols-12 mx-auto pt-3 container mt-10 sm:px-4">
+        <div class="col-span-12 md:col-span-6 pr-4 pl-4 p-2 lg:p-12">
+            <h1 class="text-4xl font-bold mb-5">
                 Looking for <span class="text-green">DS</span> for your project?
             </h1>
             <p class="text-gray-700">
@@ -124,42 +132,33 @@
                 people locate the business on a map on one side, and pick a reason
                 to contact them on the other.
             </p>
-            <hr class="w-3/4 mx-auto mb-4" />
-            <div class="text-center text-lg-end">
+            <hr class="w-3/4 mx-auto mb-4 mt-5" />
+            <div class="text-right">
                 <a href="/search" class="btn_outline_green">
                     Search DS
                     <i class="fa-solid fa-arrow-right ms-2"></i>
                 </a>
             </div>
         </div>
-        <div class="w-full lg:w-1/2 pr-4 pl-4 bg-gray p-2 py-5 lg:p-12 mt-5 lg:mt-0 rounded">
-            <h3 class="text-center text-lg-start">Ready to get started ?</h3>
+        <div class="col-span-12 md:col-span-6 pr-4 pl-4 bg-gray p-2 py-5 lg:p-12 mt-5 lg:mt-0 rounded">
+            <h3 class="text-center sm:text-left text-2xl font-bold">Ready to get started ?</h3>
             <form class="mt-5">
                 <div class="form-floating mb-3">
                     <input type="email"
-                        class="block appearance-none w-full py-1 px-2 mb-1 text-base leading-normal bg-white text-gray-800 border border-gray-200 rounded"
-                        id="Name-contact" placeholder="Enter your Name address" />
-                    <label for="Name-contact" class="text-gray-700">
-                        Name
-                    </label>
+                        class="block appearance-none w-full p-3 mb-1 text-sm leading-normal bg-white text-gray-800 border border-gray-200 rounded"
+                        id="Name-contact" placeholder="Enter Name" />
                 </div>
                 <div class="form-floating mb-3">
                     <input type="email"
-                        class="block appearance-none w-full py-1 px-2 mb-1 text-base leading-normal bg-white text-gray-800 border border-gray-200 rounded"
-                        id="email-contact" placeholder="Enter your Email address" />
-                    <label for="email-contact" class="text-gray-700">
-                        Email address
-                    </label>
+                        class="block appearance-none w-full p-3 mb-1 text-sm leading-normal bg-white text-gray-800 border border-gray-200 rounded"
+                        id="email-contact" placeholder="Enter Email" />
                 </div>
                 <div class="form-floating">
                     <textarea
-                        class="block appearance-none w-full py-1 px-2 mb-1 text-base leading-normal bg-white text-gray-800 border border-gray-200 rounded textarea_contact"
-                        placeholder="Leave your Message here" id="message-contact"></textarea>
-                    <label for="message-contact" class="text-gray-700">
-                        Message
-                    </label>
+                        class="block appearance-none w-full p-3 mb-1 text-sm leading-normal bg-white text-gray-800 border border-gray-200 rounded textarea_contact"
+                        placeholder="Message" id="message-contact"></textarea>
                 </div>
-                <div class="text-center text-lg-start mt-4">
+                <div class="text-center sm:text-left mt-4">
                     <button type="submit" class="btn_green">
                         Send Message
                     </button>
@@ -168,10 +167,11 @@
         </div>
     </div>
 
+
     <div class="parallax mt-5 mb-3 text-center text-gray-100 flex items-center flex-col justify-center">
-        <h1>Have a Project ?</h1>
-        <h3>We would love to help</h3>
-        <button type="button" class="bg-gray-100 px-5 py-1 mt-3 rounded-3 fw-bold border-0">
+        <h1 class="text-3xl font-bold mb-3">Have a Project ?</h1>
+        <h3 class="text-xl font-bold">We would love to help</h3>
+        <button type="button" class="bg-gray-100 text-black px-10 py-1 mt-5 rounded fw-bold border-0">
             Call Us
         </button>
     </div>
