add basics for faq page

--- a/contact.html
+++ b/contact.html
@@ -168,7 +168,7 @@
     </div>
 
 
-    <div class="parallax mt-5 mb-3 text-center text-gray-100 flex items-center flex-col justify-center">
+    <div class="parallax-contact mt-5 mb-3 text-center text-gray-100 flex items-center flex-col justify-center">
         <h1 class="text-3xl font-bold mb-3">Have a Project ?</h1>
         <h3 class="text-xl font-bold">We would love to help</h3>
         <button type="button" class="bg-gray-100 text-black px-10 py-1 mt-5 rounded fw-bold border-0">
