fix some styles and images and rtl + dark mode UI imporovments

--- a/contact.html
+++ b/contact.html
@@ -20,21 +20,19 @@
     <h1 class="text-center py-3"> Main HEADER Here</h1>
 
     <div class="tn_contact_hero">
-        <div class="flex flex-wrap  m-0">
-            <div class="w-full lg:w-1/2 pr-4 pl-4 relative">
-                <div class="tn_contact_hero_title absolute text-gray-100">
-                    <h1 class="fw-bold">Contact Us</h1>
-                    <h3 class="fw-normal">
-                        Got any questions?
-                        <br /> Don't hesitate to get in touch.
-                    </h3>
-                </div>
+        <div class="w-full h-full flex flex-wrap text-center justify-center items-center pr-4 pl-4">
+            <div class="tn_contact_hero_title text-gray-100">
+                <h1 class="fw-bold">Contact Us</h1>
+                <h3 class="fw-normal">
+                    Got any questions?
+                    <br /> Don't hesitate to get in touch.
+                </h3>
             </div>
         </div>
     </div>
 
 
-    <div class="grid grid-cols-12 mx-auto container mx-auto sm:px-4 text-center">
+    <div class="dark:text-gray-300 grid grid-cols-12 mx-auto container mx-auto sm:px-4 text-center">
         <div class="col-span-12 sm:col-span-6 md:col-span-3 pr-4 pl-4 pr-4 pl-4 mt-3">
             <a href="tel:+601129114461" rel="noreferrer">
                 <div class="contact_card pt-5 pb-3 px-2 h-full">
@@ -47,7 +45,7 @@
                         </svg>
                     </div>
                     <h6 class="fw-bolder mb-5">Call Us</h6>
-                    <p class="mb-5 text-gray-700">+60 1129114461</p>
+                    <p class="dark:text-gray-300 mb-5 text-gray-700">+60 1129114461</p>
                 </div>
             </a>
         </div>
@@ -63,7 +61,8 @@
                         </svg>
                     </div>
                     <h6 class="fw-bolder mb-5">Visit Us</h6>
-                    <p class="mb-5 text-gray-700 text-sm">A-14-03 AMPANG BOULEVARD, AMPANG, SELANGOR, MALAYSIAN</p>
+                    <p class="dark:text-gray-300 mb-5 text-gray-700 text-sm">A-14-03 AMPANG BOULEVARD, AMPANG, SELANGOR,
+                        MALAYSIAN</p>
                 </div>
             </a>
         </div>
@@ -80,7 +79,7 @@
                         </svg>
                     </div>
                     <h6 class="fw-bolder mb-5">Mail Us</h6>
-                    <p class="mb-5 text-gray-700">info@karuf.com</p>
+                    <p class="dark:text-gray-300 mb-5 text-gray-700">info@karuf.com</p>
                 </div>
             </a>
         </div>
@@ -97,7 +96,7 @@
                         </svg>
                     </div>
                     <h6 class="fw-bolder mb-5">Live Chat</h6>
-                    <p class="mb-5 text-gray-700">Chat with Us 24/7</p>
+                    <p class="dark:text-gray-300 mb-5 text-gray-700">Chat with Us 24/7</p>
                 </div>
             </a>
         </div>
@@ -106,7 +105,7 @@
 
 
 
-    <div class="mt-10 container mx-auto sm:px-4 text-center">
+    <div class="dark:text-gray-300 mt-20 mb-16 container mx-auto sm:px-4 text-center">
         <h4 class="text-xl"> Let's Talk !</h4>
         <p class="text-gray-500">
             To know more about our work or process feel free to get in touch.
@@ -114,7 +113,7 @@
     </div>
 
 
-    <div class="grid grid-cols-12 mx-auto pt-3 container mt-10 sm:px-4">
+    <div class="dark:text-gray-300 grid grid-cols-12 mx-auto pt-3 container mt-10 sm:px-4">
         <div class="col-span-12 md:col-span-6 pr-4 pl-4 p-2 lg:p-12">
             <h1 class="text-4xl font-bold mb-5">
                 Looking for <span class="text-green">DS</span> for your project?
@@ -133,7 +132,7 @@
                 to contact them on the other.
             </p>
             <hr class="w-3/4 mx-auto mb-4 mt-5" />
-            <div class="text-right">
+            <div class="text-right rtl:text-left">
                 <a href="/search" class="btn_outline_green">
                     Search DS
                     <i class="fa-solid fa-arrow-right ms-2"></i>
@@ -141,7 +140,7 @@
             </div>
         </div>
         <div class="col-span-12 md:col-span-6 pr-4 pl-4 bg-gray p-2 py-5 lg:p-12 mt-5 lg:mt-0 rounded">
-            <h3 class="text-center sm:text-left text-2xl font-bold">Ready to get started ?</h3>
+            <h3 class="text-center sm:text-left rtl:text-right text-2xl font-bold">Ready to get started ?</h3>
             <form class="mt-5">
                 <div class="form-floating mb-3">
                     <input type="email"
@@ -176,8 +175,8 @@
         </button>
     </div>
 
-    <div class="py-5 text-center">
-        <h5 class="mb-4">Find us in Map</h5>
+    <div class="dark:text-gray-300 py-5 text-center">
+        <h5 class="mb-10">Find us in Map</h5>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d6017.020167264201!2d28.9806366!3d41.0578416!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDHCsDAzJzI3LjYiTiAyOMKwNTgnMzguMyJF!5e0!3m2!1sen!2str!4v1676772061050!5m2!1sen!2str"
             allowfullscreen loading="lazy" title="map" class="contact_map"
