--- a/faq.html
+++ b/faq.html
@@ -33,46 +33,46 @@
             </div>
         </div>
 
-        <div class="text-center">
+        <div class="text-center dark:text-gray-300">
             <h1 class="text-3xl">We are here to HELP you</h1>
-            <p class="mt-3">
+            <h6 class="mt-3">
                 Karuf's company whose function is as an online platform giving businesses access
                 <br />
                 to freelance workers
-            </p>
+            </h6>
         </div>
 
 
-        <div class="container mx-auto sm:px-4 pb-5">
+        <div class="container mx-auto sm:px-4 pb-5 dark:text-gray-300">
 
             <div class="grid grid-cols-12 mt-10">
 
                 <div class="col-span-12 sm:col-span-6 lg:col-span-3 text-center mt-5 mx-auto">
                     <button class="faq_card active h-full rounded-lg shadow-md py-5 px-20 transition duration-500"
                         id="faq_card_1">
-                        <img src="./assets/img/seller.jpg" alt="" class="mx-auto" />
-                        <p class="mt-2 font-bold text-green">Seller</p>
+                        <img src="https://karuf.com/public/castum-page/img/seller.png" alt="" class="mx-auto" />
+                        <h6 class="mt-2 font-bold text-green dark:text-gray-300">Seller</h6>
                     </button>
                 </div>
                 <div class="col-span-12 sm:col-span-6 lg:col-span-3 text-center mt-5 mx-auto">
                     <button class="faq_card h-full rounded-lg shadow-md py-5 px-20 transition duration-500"
                         id="faq_card_2">
-                        <img src="./assets/img/seller.jpg" alt="" class="mx-auto" />
-                        <p class="mt-2 font-bold text-green">Buyer</p>
+                        <img src="https://karuf.com/public/castum-page/img/buyer.png" alt="" class="mx-auto" />
+                        <h6 class="mt-2 font-bold text-green dark:text-gray-300">Buyer</h6>
                     </button>
                 </div>
                 <div class="col-span-12 sm:col-span-6 lg:col-span-3 text-center mt-5 mx-auto">
                     <button class="faq_card h-full rounded-lg shadow-md py-5 px-20 transition duration-500"
                         id="faq_card_3">
-                        <img src="./assets/img/payment.jpg" alt="" class="mx-auto" />
-                        <p class="mt-2 font-bold text-green">Payment</p>
+                        <img src="https://karuf.com/public/castum-page/img/payment.png" alt="" class="mx-auto" />
+                        <h6 class="mt-2 font-bold text-green dark:text-gray-300">Payment</h6>
                     </button>
                 </div>
                 <div class="col-span-12 sm:col-span-6 lg:col-span-3 text-center mt-5 mx-auto">
                     <button class="faq_card h-full rounded-lg shadow-md py-5 px-20 transition duration-500"
                         id="faq_card_4">
-                        <img src="./assets/img/karuf.jpg" alt="" class="mx-auto" />
-                        <p class="mt-2 font-bold text-green">General</p>
+                        <img src="https://karuf.com/public/castum-page/img/karuf.png" alt="" class="mx-auto" />
+                        <h6 class="mt-2 font-bold text-green dark:text-gray-300">General</h6>
                     </button>
                 </div>
 
@@ -81,28 +81,28 @@
 
 
             <div class="faq_questions_holder" id="faq_questions_holder_1">
-                <div class="text-2xl w-8/12 mx-auto font-semibold mt-20 mb-10">
+                <div class="text-xl min-w-full text-center md:text-2xl w-8/12 mx-auto font-semibold mt-20 mb-10">
                     Frequantly ask for Seller in
                     <span class="text-green">Karuf</span>
                 </div>
             </div>
 
             <div class="faq_questions_holder hidden" id="faq_questions_holder_2">
-                <div class="text-2xl w-8/12 mx-auto font-semibold mt-20 mb-10">
+                <div class="text-xl min-w-full text-center md:text-2xl w-8/12 mx-auto font-semibold mt-20 mb-10">
                     Frequantly ask for Buyer in
                     <span class="text-green">Karuf</span>
                 </div>
             </div>
 
             <div class="faq_questions_holder hidden" id="faq_questions_holder_3">
-                <div class="text-2xl w-8/12 mx-auto font-semibold mt-20 mb-10">
+                <div class="text-xl min-w-full text-center md:text-2xl w-8/12 mx-auto font-semibold mt-20 mb-10">
                     Frequantly ask for Payment in
                     <span class="text-green">Karuf</span>
                 </div>
             </div>
 
             <div class="faq_questions_holder hidden" id="faq_questions_holder_4">
-                <div class="text-2xl w-8/12 mx-auto font-semibold mt-20 mb-10">
+                <div class="text-xl min-w-full text-center md:text-2xl w-8/12 mx-auto font-semibold mt-20 mb-10">
                     Frequantly ask for General in
                     <span class="text-green">Karuf</span>
                 </div>
@@ -115,17 +115,17 @@
 
             <div class="px-5 lg:px-0 lg:w-2/3 mx-auto">
                 <div class="pb-24">
-                    <div class="tn_accar_holder border-b mb-3">
-                        <button class="tn_accar_btn flex justify-between items-center w-full py-5" id="faq_accar_1">
-                            <h1 class="font-bold">
-                                <span class="tn_accar_bullet rounded-full bg-black mr-3"></span>
+                    <div class="tn_faq_accar_holder border-b mb-3">
+                        <button class="tn_faq_accar_btn flex justify-between items-center w-full py-5" id="faq_accar_1">
+                            <h1 class="font-bold text-left">
+                                <span class="tn_accar_bullet rounded-full bg-black dark:bg-white mr-3"></span>
                                 <span class="">
                                     Purchasing process
                                 </span>
                             </h1>
                             <i class="fa-solid fa-circle-plus text-green text-xl"></i>
                         </button>
-                        <div class="tn_accar_body transition-all duration-500 h-0 overflow-hidden" id="faq_body_1">
+                        <div class="tn_faq_accar_body transition-all duration-500 h-0 overflow-hidden" id="faq_body_1">
                             <div class="mb-5">
                                 It is
                                 shown by default, until the collapse plugin adds the appropriate
@@ -136,17 +136,17 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tn_accar_holder border-b mb-3">
-                        <button class="tn_accar_btn flex justify-between items-center w-full py-5" id="faq_accar_2">
-                            <h1 class="font-bold">
-                                <span class="tn_accar_bullet rounded-full bg-black mr-3"></span>
+                    <div class="tn_faq_accar_holder border-b mb-3">
+                        <button class="tn_faq_accar_btn flex justify-between items-center w-full py-5" id="faq_accar_2">
+                            <h1 class="font-bold text-left">
+                                <span class="tn_accar_bullet rounded-full bg-black dark:bg-white mr-3"></span>
                                 <span class="">
                                     How secure are your Payment information ?
                                 </span>
                             </h1>
                             <i class="fa-solid fa-circle-plus text-green text-xl"></i>
                         </button>
-                        <div class="tn_accar_body transition-all duration-500 h-0 overflow-hidden" id="faq_body_2">
+                        <div class="tn_faq_accar_body transition-all duration-500 h-0 overflow-hidden" id="faq_body_2">
                             <div class="mb-5">
                                 It is
                                 shown by default, until the collapse plugin adds the appropriate
@@ -157,17 +157,17 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tn_accar_holder border-b mb-3">
-                        <button class="tn_accar_btn flex justify-between items-center w-full py-5" id="faq_accar_3">
-                            <h1 class="font-bold">
-                                <span class="tn_accar_bullet rounded-full bg-black mr-3"></span>
+                    <div class="tn_faq_accar_holder border-b mb-3">
+                        <button class="tn_faq_accar_btn flex justify-between items-center w-full py-5" id="faq_accar_3">
+                            <h1 class="font-bold text-left">
+                                <span class="tn_accar_bullet rounded-full bg-black dark:bg-white mr-3"></span>
                                 <span class="">
                                     How to apply for Prepaid Card
                                 </span>
                             </h1>
                             <i class="fa-solid fa-circle-plus text-green text-xl"></i>
                         </button>
-                        <div class="tn_accar_body transition-all duration-500 h-0 overflow-hidden" id="faq_body_3">
+                        <div class="tn_faq_accar_body transition-all duration-500 h-0 overflow-hidden" id="faq_body_3">
                             <div class="mb-5">
                                 It is
                                 shown by default, until the collapse plugin adds the appropriate
@@ -178,17 +178,17 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tn_accar_holder border-b mb-3">
-                        <button class="tn_accar_btn flex justify-between items-center w-full py-5" id="faq_accar_4">
-                            <h1 class="font-bold">
-                                <span class="tn_accar_bullet rounded-full bg-black mr-3"></span>
+                    <div class="tn_faq_accar_holder border-b mb-3">
+                        <button class="tn_faq_accar_btn flex justify-between items-center w-full py-5" id="faq_accar_4">
+                            <h1 class="font-bold text-left">
+                                <span class="tn_accar_bullet rounded-full bg-black dark:bg-white mr-3"></span>
                                 <span class="">
                                     How do I know of I have latest version ?
                                 </span>
                             </h1>
                             <i class="fa-solid fa-circle-plus text-green text-xl"></i>
                         </button>
-                        <div class="tn_accar_body transition-all duration-500 h-0 overflow-hidden" id="faq_body_4">
+                        <div class="tn_faq_accar_body transition-all duration-500 h-0 overflow-hidden" id="faq_body_4">
                             <div class="mb-5">
                                 It is
                                 shown by default, until the collapse plugin adds the appropriate
@@ -205,41 +205,30 @@
 
             <div class="container grid grid-cols-12 mt-24">
 
+
+                <div class="col-span-12 md:col-span-6 px-10 ">
+                    <div class="bg-gray-100 dark:bg-gray-900 p-2 py-5 lg:p-12 mt-5 lg:mt-0 rounded">
+                        <h3 class="text-center sm:text-left rtl:text-right text-2xl font-bold">Ready to get started ?
+                        </h3>
+                        <h6 class="mt-10 leading-8">
+                            If you do not find the answer to your questions, don't hesitate. contact to usIf you do not
+                            find the answer to your questions, don't hesitate. contact to usIf you do not find the
+                            answer to your questions, don't hesitate. contact to usIf you do not find the answer to your
+                            questions, don't hesitate. contact to usIf you do not find the answer to your questions,
+                            don't hesitate. contact to usIf you do not find the answer to your questions, don't
+                            hesitate. contact to us
+                        </h6>
+                    </div>
+                </div>
                 <div class="col-span-12 sm:col-span-6 text-center mt-5 mx-auto px-10">
-                    <div class="text-left font-bold text-xl">
+                    <div class="text-left rtl:text-right font-bold text-xl">
                         <span>
                             If you do not find the answer to your questions, don't hesitate.
                         </span>
                         <span class="text-green">contact to us</span>
                     </div>
-                    <img src="./assets/img/faq-gif.gif" alt="" class="">
-                </div>
-                <div class="col-span-12 md:col-span-6 px-10">
-                    <div class="bg-gray-100 p-2 py-5 lg:p-12 mt-5 lg:mt-0 rounded">
-                        <h3 class="text-center sm:text-left text-2xl font-bold">Ready to get started ?</h3>
-                        <form class="mt-5">
-                            <div class="form-floating mb-3">
-                                <input type="email"
-                                    class="block appearance-none w-full p-3 mb-1 text-sm leading-normal bg-white text-gray-800 border border-gray-200 rounded"
-                                    id="Name-contact" placeholder="Enter Name" />
-                            </div>
-                            <div class="form-floating mb-3">
-                                <input type="email"
-                                    class="block appearance-none w-full p-3 mb-1 text-sm leading-normal bg-white text-gray-800 border border-gray-200 rounded"
-                                    id="email-contact" placeholder="Enter Email" />
-                            </div>
-                            <div class="form-floating">
-                                <textarea
-                                    class="block appearance-none w-full p-3 mb-1 text-sm leading-normal bg-white text-gray-800 border border-gray-200 rounded textarea_contact"
-                                    placeholder="Message" id="message-contact"></textarea>
-                            </div>
-                            <div class="text-center sm:text-left mt-4">
-                                <button type="submit" class="btn_green rounded-xl">
-                                    Send Message
-                                </button>
-                            </div>
-                        </form>
-                    </div>
+                    <img src="./assets/img/faq-gif.gif" alt="" class="dark:hidden block mt-6">
+                    <img src="./assets/img/faq-gif-dark.gif" alt="" class="hidden dark:block mt-6">
                 </div>
 
             </div>
@@ -253,28 +242,28 @@
             </button>
         </div>
 
-        <div class="container mx-auto text-center">
+        <div class="container mx-auto text-center dark:text-gray-300">
             <h1 class="text-green text-2xl font-bold">You still have a question?</h1>
-            <p class="text-gray-400 mt-6 leading-7">
+            <h6 class="text-gray-400 mt-6 leading-7 dark:text-gray-300">
                 If you cannot find answer to your questions in our FAQ,
                 <br>
                 you can always contact us. We will asnwer to you
                 shortly !
-            </p>
+            </h6>
 
             <div class="container w-8/12 mx-auto grid grid-cols-12 mt-24">
 
-                <a href="tel:+601129114461"" rel=" noreferrer" class="col-span-12 sm:col-span-6 w-4/5 rounded-lg hover:bg-white shadow-lg hover:shadow-md transition duration-500
+                <a href="tel:+601129114461"" rel=" noreferrer" class="col-span-12 sm:col-span-6 w-4/5 rounded-lg shadow-lg hover:shadow-md transition duration-500
                     text-center mt-5 mx-auto py-5 border border-gray-200">
-                    <i class="fa-solid fa-phone-volume text-3xl text-green"></i>
-                    <h1 class="text-md font-bold mt-3">+ (856) 0936-45-987</h1>
-                    <p class="text-gray-500 text-sm mt-3">We are always Happy to help.</p>
+                    <i class="fa-solid fa-phone-volume text-3xl text-green dark:text-gray-300"></i>
+                    <h1 class="text-md font-bold mt-3 dark:text-gray-300">+ (856) 0936-45-987</h1>
+                    <h6 class="text-gray-500 text-sm mt-3 dark:text-gray-300">We are always Happy to help.</h6>
                 </a>
-                <a href="mailto:info@karuf.com" rel="noreferrer" class="col-span-12 sm:col-span-6 w-4/5 rounded-lg hover:bg-white shadow-lg hover:shadow-md transition
+                <a href="mailto:info@karuf.com" rel="noreferrer" class="col-span-12 sm:col-span-6 w-4/5 rounded-lg shadow-lg hover:shadow-md transition
                     duration-500 text-center mt-5 mx-auto py-5 border border-gray-200">
-                    <i class="fa-solid fa-envelope-circle-check text-3xl text-green"></i>
-                    <h1 class="text-md font-bold mt-3">info@karuf.com</h1>
-                    <p class="text-gray-500 text-sm mt-3">We are always Happy to help.</p>
+                    <i class="fa-solid fa-envelope-circle-check text-3xl text-green dark:text-gray-300"></i>
+                    <h1 class="text-md font-bold mt-3 dark:text-gray-300">info@karuf.com</h1>
+                    <h6 class="text-gray-500 text-sm mt-3 dark:text-gray-300">We are always Happy to help.</h6>
                 </a>
 
             </div>
