--- a/terms.html
+++ b/terms.html
@@ -28,16 +28,17 @@
             </div>
         </div>
 
-        <div class="container mx-auto sm:px-4 pb-5">
-            <div class="tn_terms_holder mx-auto bg-white border rounded-4 pt-5 p-1 lg:p-12">
-                <div class="tn_terms_header text-center">
+        <div class="dark:bg-gray-700 container mx-auto px-7 sm:px-4 pb-5">
+            <div
+                class="dark:bg-gray-700 tn_terms_holder mx-auto bg-white dark:bg-gray-700 border dark:border-0 rounded-4 pt-5 p-1 lg:p-12">
+                <div class="dark:bg-gray-700 tn_terms_header text-center">
                     <img alt="" src="assets/img/terms.jpg" class="mb-4 mx-auto" />
                     <h2 class="font-bold pb-2 lg:pb-12">
                         <span class="text-green">Karuf's</span>
-                        <span>Terms Of Services</span>
+                        <span class="dark:text-gray-300">Terms Of Services</span>
                     </h2>
                     <div class="container mx-auto sm:px-4 tn_terms_letter px-2 sm:px-4 md:px-6 lg:px-12 mt-5">
-                        <p align="justify" class="text-gray-darke">
+                        <p align="justify" class="text-gray-darker dark:text-gray-300">
                             Welcome to Karuf.com.
                             <br />
                             <br />
