--- a/privacy.html
+++ b/privacy.html
@@ -27,7 +27,7 @@
                 <div class="w-full lg:w-1/2 pr-4 pl-4 relative">
                     <div class="tn_policy_hero_title absolute text-gray-100">
                         <h1 class="fw-bold">Privacy & Policy</h1>
-                        <h3 class="fw-normal">
+                        <h3 class="text-center fw-normal">
                             Karuf's privacy makes it easy to find information on privacy
                             topics,
                             <br />
@@ -47,57 +47,71 @@
 
         <div class="privacy_page mx-auto px-2 lg:px-12">
             <div class="container-xxl grid grid-cols-12 m-0 mx-auto pb-10">
-                <div class="col-span-12 lg:col-span-4 w-full lg:w-1/3 pr-4 pl-4 px-1 xl:px-4 px-xxl-2 mb-5 lg:mb-0">
-                    <div class="w-full bg-white py-4 rounded-4">
-                        <button class="active tn_policy_tab_btn text-gray py-3 ps-4 block text-left m-auto"
+                <div
+                    class="dark:bg-gray-700 col-span-12 lg:col-span-4 w-full lg:w-1/3 pr-4 pl-4 px-1 xl:px-4 px-xxl-2 mb-5 lg:mb-0">
+                    <div class="dark:bg-gray-700 w-full bg-white py-4 rounded-4">
+                        <button
+                            class="active tn_policy_tab_btn dark:text-gray-300 text-gray py-3 ps-4 block rtl:text-right text-left m-auto"
                             id="privacy_tab_btn_1">
                             Introduction
                         </button>
-                        <button class="tn_policy_tab_btn text-gray py-3 ps-4 block text-left m-auto"
+                        <button
+                            class="tn_policy_tab_btn dark:text-gray-300 text-gray py-3 ps-4 block rtl:text-right text-left m-auto"
                             id="privacy_tab_btn_2">
                             Definition
                         </button>
-                        <button class="tn_policy_tab_btn text-gray py-3 ps-4 block text-left m-auto"
+                        <button
+                            class="tn_policy_tab_btn dark:text-gray-300 text-gray py-3 ps-4 block rtl:text-right text-left m-auto"
                             id="privacy_tab_btn_3">
                             Freelancers
                         </button>
-                        <button class="tn_policy_tab_btn text-gray py-3 ps-4 block text-left m-auto"
+                        <button
+                            class="tn_policy_tab_btn dark:text-gray-300 text-gray py-3 ps-4 block rtl:text-right text-left m-auto"
                             id="privacy_tab_btn_4">
                             Clients
                         </button>
-                        <button class="tn_policy_tab_btn text-gray py-3 ps-4 block text-left m-auto"
+                        <button
+                            class="tn_policy_tab_btn dark:text-gray-300 text-gray py-3 ps-4 block rtl:text-right text-left m-auto"
                             id="privacy_tab_btn_5">
                             Site Visitors
                         </button>
-                        <button class="tn_policy_tab_btn text-gray py-3 ps-4 block text-left m-auto"
+                        <button
+                            class="tn_policy_tab_btn dark:text-gray-300 text-gray py-3 ps-4 block rtl:text-right text-left m-auto"
                             id="privacy_tab_btn_6">
                             Our Legal Basis for Using Your Personal Information
                         </button>
-                        <button class="tn_policy_tab_btn text-gray py-3 ps-4 block text-left m-auto"
+                        <button
+                            class="tn_policy_tab_btn dark:text-gray-300 text-gray py-3 ps-4 block rtl:text-right text-left m-auto"
                             id="privacy_tab_btn_7">
                             How Do We Use The Information Collected?
                         </button>
-                        <button class="tn_policy_tab_btn text-gray py-3 ps-4 block text-left m-auto"
+                        <button
+                            class="tn_policy_tab_btn dark:text-gray-300 text-gray py-3 ps-4 block rtl:text-right text-left m-auto"
                             id="privacy_tab_btn_8">
                             How Long Do We Keep Personal Information
                         </button>
-                        <button class="tn_policy_tab_btn text-gray py-3 ps-4 block text-left m-auto"
+                        <button
+                            class="tn_policy_tab_btn dark:text-gray-300 text-gray py-3 ps-4 block rtl:text-right text-left m-auto"
                             id="privacy_tab_btn_9">
                             Children
                         </button>
-                        <button class="tn_policy_tab_btn text-gray py-3 ps-4 block text-left m-auto"
+                        <button
+                            class="tn_policy_tab_btn dark:text-gray-300 text-gray py-3 ps-4 block rtl:text-right text-left m-auto"
                             id="privacy_tab_btn_10">
                             Unsibscribe
                         </button>
-                        <button class="tn_policy_tab_btn text-gray py-3 ps-4 block text-left m-auto"
+                        <button
+                            class="tn_policy_tab_btn dark:text-gray-300 text-gray py-3 ps-4 block rtl:text-right text-left m-auto"
                             id="privacy_tab_btn_11">
                             Sharing Personal Information with Third Parties
                         </button>
-                        <button class="tn_policy_tab_btn text-gray py-3 ps-4 block text-left m-auto"
+                        <button
+                            class="tn_policy_tab_btn dark:text-gray-300 text-gray py-3 ps-4 block rtl:text-right text-left m-auto"
                             id="privacy_tab_btn_12">
                             Where We Store Your Personal Information
                         </button>
-                        <button class="tn_policy_tab_btn text-gray py-3 ps-4 block text-left m-auto"
+                        <button
+                            class="tn_policy_tab_btn dark:text-gray-300 text-gray py-3 ps-4 block rtl:text-right text-left m-auto"
                             id="privacy_tab_btn_13">
                             Cookies
                         </button>
@@ -105,8 +119,8 @@
                 </div>
                 <div class="col-span-12 lg:col-span-8 w-full h-full pr-4 pl-4 px-3">
 
-                    <div class="tn_privacy_content" id="privacy_content_1">
-                        <h1 class="text-4xl font-bold">
+                    <div class="tn_privacy_content dark:text-gray-300" id="privacy_content_1">
+                        <h1 class="dark:text-gray-300 text-4xl font-bold">
                             Welcome to the <span class="text-green">Karuf</span> Privacy Center
                         </h1>
                         <p class="mt-3 mb-10">
@@ -159,7 +173,7 @@
                             further information
                         </p>
                     </div>
-                    <div class="tn_privacy_content hidden" id="privacy_content_2">
+                    <div class="tn_privacy_content dark:text-gray-300 hidden" id="privacy_content_2">
                         <h1 class="text-4xl font-bold">
                             Definition
                         </h1>
@@ -213,7 +227,7 @@
                             further information
                         </p>
                     </div>
-                    <div class="tn_privacy_content hidden" id="privacy_content_3">
+                    <div class="tn_privacy_content dark:text-gray-300 hidden" id="privacy_content_3">
                         <h1 class="text-4xl font-bold">
                             Freelancers
                         </h1>
@@ -267,7 +281,7 @@
                             further information
                         </p>
                     </div>
-                    <div class="tn_privacy_content hidden" id="privacy_content_4">
+                    <div class="tn_privacy_content dark:text-gray-300 hidden" id="privacy_content_4">
                         <h1 class="text-4xl font-bold">
                             Clients
                         </h1>
@@ -321,7 +335,7 @@
                             further information
                         </p>
                     </div>
-                    <div class="tn_privacy_content hidden" id="privacy_content_5">
+                    <div class="tn_privacy_content dark:text-gray-300 hidden" id="privacy_content_5">
                         <h1 class="text-4xl font-bold">
                             Site Visitors
                         </h1>
@@ -375,7 +389,7 @@
                             further information
                         </p>
                     </div>
-                    <div class="tn_privacy_content hidden" id="privacy_content_6">
+                    <div class="tn_privacy_content dark:text-gray-300 hidden" id="privacy_content_6">
                         <h1 class="text-4xl font-bold">
                             Our Legal Basis for Using Your Personal Information
                         </h1>
@@ -429,7 +443,7 @@
                             further information
                         </p>
                     </div>
-                    <div class="tn_privacy_content hidden" id="privacy_content_7">
+                    <div class="tn_privacy_content dark:text-gray-300 hidden" id="privacy_content_7">
                         <h1 class="text-4xl font-bold">
                             How Do We Use The Information Collected?
                         </h1>
@@ -483,7 +497,7 @@
                             further information
                         </p>
                     </div>
-                    <div class="tn_privacy_content hidden" id="privacy_content_8">
+                    <div class="tn_privacy_content dark:text-gray-300 hidden" id="privacy_content_8">
                         <h1 class="text-4xl font-bold">
                             How Long Do We Keep Personal Information
                         </h1>
@@ -537,7 +551,7 @@
                             further information
                         </p>
                     </div>
-                    <div class="tn_privacy_content hidden" id="privacy_content_9">
+                    <div class="tn_privacy_content dark:text-gray-300 hidden" id="privacy_content_9">
                         <h1 class="text-4xl font-bold">
                             Children
                         </h1>
@@ -591,7 +605,7 @@
                             further information
                         </p>
                     </div>
-                    <div class="tn_privacy_content hidden" id="privacy_content_10">
+                    <div class="tn_privacy_content dark:text-gray-300 hidden" id="privacy_content_10">
                         <h1 class="text-4xl font-bold">
                             Unsibscribe
                         </h1>
@@ -645,7 +659,7 @@
                             further information
                         </p>
                     </div>
-                    <div class="tn_privacy_content hidden" id="privacy_content_11">
+                    <div class="tn_privacy_content dark:text-gray-300 hidden" id="privacy_content_11">
                         <h1 class="text-4xl font-bold">
                             Sharing Personal Information with Third Parties
                         </h1>
@@ -699,7 +713,7 @@
                             further information
                         </p>
                     </div>
-                    <div class="tn_privacy_content hidden" id="privacy_content_12">
+                    <div class="tn_privacy_content dark:text-gray-300 hidden" id="privacy_content_12">
                         <h1 class="text-4xl font-bold">
                             Where We Store Your Personal Information
                         </h1>
@@ -753,7 +767,7 @@
                             further information
                         </p>
                     </div>
-                    <div class="tn_privacy_content hidden" id="privacy_content_13">
+                    <div class="tn_privacy_content dark:text-gray-300 hidden" id="privacy_content_13">
                         <h1 class="text-4xl font-bold">
                             Cookies
                         </h1>
